src/tui/snapshots/fnug__tui__context_menu__tests__snapshot_command_menu_pending.snap
---
source: src/tui/context_menu.rs
expression: render_menu_text(&items)
---
 Select  [Space]
 Run  [r]
~Restart
~Stop  [s]
~Copy output  [c]
 Clear  [x]
