src/tui/snapshots/fnug__tui__context_menu__tests__snapshot_group_menu_collapsed_none_selected.snap
---
source: src/tui/context_menu.rs
expression: render_menu_text(&items)
---
 Expand  [l]
 Select all  [Space]
 Run group  [r]
~Run selected
