src/tui/snapshots/fnug__tui__context_menu__tests__snapshot_group_menu_partial_selection.snap
---
source: src/tui/context_menu.rs
expression: render_menu_text(&items)
---
 Collapse  [h]
 Select all  [Space]
 Run group  [r]
 Run selected
