src/tui/snapshots/fnug__tui__context_menu__tests__snapshot_terminal_menu_no_process.snap
---
source: src/tui/context_menu.rs
expression: render_menu_text(&items)
---
 Run  [r]
~Copy output  [c]
~Clear  [x]
