src/tui/snapshots/fnug__tui__context_menu__tests__snapshot_terminal_menu_running_scrolled.snap
---
source: src/tui/context_menu.rs
expression: render_menu_text(&items)
---
 Scroll to top  [{]
 Scroll to bottom  [}]
 Restart  [r]
 Stop  [s]
 Copy output  [c]
 Clear  [x]
